lab1/Test/L1-A-12-58.output
Error Type B at Line 1
Error Type B at Line 14
Error Type B at Line 16
Error Type A at Line 18
Error Type B at Line 21
Error Type A at Line 35
Error Type B at Line 41
Error Type A at Line 47
Error Type A at Line 52
